# nano-claude-code-python

./: .gitignore  README.md  pyproject.toml
agent/: __init__.py  chat.py  prompt.py
agent/tools/: filesystem.py
claude/: __init__.py  call.py  call_tool.py  client.py  message.py
cli/: __init__.py  direct.py  main.py
cmd/: direct.py  main.py
config/: __init__.py  config.example.json  env.py
errors/: __init__.py  errors.py
